# locus_no_pilotus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_paths.cmake  doxyfile  install_doxygen.sh  unit_circle.html
.extra/GeoGebra/: 2 circles test.ggb  3 circles test.ggb  Many circles test.ggb  math_test_1.ggb  no intersection with obstacle test.ggb  no obstacle test.ggb  one circle test.ggb  one poly and one circle.ggb  one poly test.ggb  three polys test.ggb  two circles touch.ggb  two polys test.ggb  unit_circle.ggb  unit_circle.html
.extra/doxygen/: doxyfile  install_doxygen.sh
.extra/images/: images_source.html
.extra/json/: PRESENTATION.json  beauty_cycle.json  circles.json  file.json  lot_of_points.json  math_test_1.json  shapes.json  shapes_2.json  tessaract.json
.github/workflows/: doxygen.yml
Backend/: Adjacency matrix.cpp  Adjacency matrix.h  CMakeLists.txt  adjacency_matrix.cpp  adjacency_matrix.h  travelling_salesmans_problem.cpp  travelling_salesmans_problem.h  tspgraph.h
Backend/dijkstras_algorithm/: points_graph.cpp  points_graph.h
Backend/littles_algorithm/: adjacency_matrix.cpp  adjacency_matrix.h  travelling_salesmans_problem.cpp  travelling_salesmans_problem.h  tspgraph.h
Backend/optimal_way/: circle_obstacle.h  circleobstacle.h  helpers_functions.cpp  helpers_functions.h  optimal_way.cpp  optimal_way.h  path_graph.h  pathgraph.cpp  pathgraph.h
backend/: adjacency_matrix.cpp  adjacency_matrix.h
backend/littles_algorithm/: adjacency_matrix.h  travelling_salesmans_problem.cpp  travelling_salesmans_problem.h
backend/optimal_way/: circle_obstacle.h  helpers_functions.cpp  helpers_functions.h  optimal_way.cpp  optimal_way.h  path_graph.cpp  path_graph.h
cmake_scripts/: scripts_for_icecream_cpp.cmake  scripts_for_qcustomplot.cmake  scripts_for_vscode.cmake
data_tools/: CMakeLists.txt  _tools.h
data_tools/data_manager/: data_manager.cpp  data_manager.h
data_tools/plot_area/: check_errors.cpp  plot_area.cpp  plot_area.h
data_tools/table_manager/: table_manager.cpp  table_manager.h
data_tools/tables_connection/: tables_connection.cpp  tables_connection.h
gui/: CMakeLists.txt  _objects.h  airport.cpp  airport.h  base.h  circle_obstacle.cpp  circle_obstacle.h  customplot.h  flying_robot.cpp  flying_robot.h  hill.cpp  hill.h  no_direct_fly_rule.cpp  no_direct_fly_rule.h  plot_item_arc.h  segment.cpp  segment.h  target.cpp  target.h  trajectory.cpp  trajectory.h  trappy_circle.cpp  trappy_circle.h  trappy_line.cpp  trappy_line.h
gui/data_manager/: data_manager.cpp  data_manager.h
images/: images_source.html
lib/: CMakeLists.txt  _objects.h  base.h  circle_obstacle.cpp  hill.cpp  hill.h  infinity.h  module.h  no_direct_fly_rule.cpp  no_direct_fly_rule.h  point.cpp  point.h  segment.cpp  segment.h  target.cpp  target.h  trappy_circle.cpp  trappy_circle.h  trappy_line.cpp  trappy_line.h
main/: CMakeLists.txt  add_data_form.cpp  add_data_form.h  add_data_form.ui  add_target_form.h  add_trappy_circle_form.cpp  interaction_buttons.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_connections.cpp  open_file.cpp  save_file_as.cpp
main/add_objects_forms/: _forms.h  add_hill_form.cpp  add_hill_form.h  add_hill_form.ui  add_target_form.cpp  add_target_form.h  add_target_form.ui  add_trappy_circle_form.cpp  add_trappy_circle_form.h  add_trappy_circle_form.ui  add_trappy_line_form.cpp  add_trappy_line_form.h  add_trappy_line_form.ui
main/file_actions/: open_file.cpp  save_file_as.cpp
main/gui_json_file/: gui_json_file.h  new.cpp  open.cpp  save.cpp
main/mainwindow_connections/: interaction_buttons.cpp  mainwindow_connections.cpp  menu_add_actions.cpp  menu_file_actions.cpp  other_buttons.cpp  other_connections.cpp  trajectory_and_robot.cpp
main/plot_area/: plot_area.cpp  plot_area.h
main/plot_manager/: plot_manager.cpp  plot_manager.h
main/table_manager/: table_manager.cpp  table_manager.h
math/: calculate_trajectory.cpp  calculate_trajectory.h  trajectory.cpp  trajectory.h  travelling_salesmans_problem.h
math/littles_algorithm/: adjacency_matrix.cpp  adjacency_matrix.h  travelling_salesmans_problem.cpp  travelling_salesmans_problem.h  tspgraph.h
math/optimal_way/: circle_obstacle.h  helpers_functions.cpp  helpers_functions.h  obstacles.h  optimal_way.cpp  optimal_way.h  path_graph.cpp  path_graph.h
qcustomplot/: CMakeLists.txt  qcustomplot.cpp
tests/: CMakeLists.txt  dijkstra_test.cpp  many_tsp_tests.cpp  matrix_test.cpp  module_test.cpp  target_test.cpp  tsp_tests.cpp
tests/gui/: segment_test.txt
tests/lib/: hill_test.cpp  point_test.cpp  segment_test.cpp  target_test.cpp  trappy_circle_test.cpp  trappy_line_test.cpp
tests/maths/: are_there_intersections.cpp  dijkstra.cpp  dijkstra_test.cpp  dijkstra_tests.cpp  distance_between_points.cpp  distance_between_points_test.cpp  helpers_function_test.cpp  many_tsp.cpp  many_tsp_tests.cpp  matrix.cpp  matrix_test.cpp  optimal_way.cpp  tangen_points_from_point.cpp  tangent_points.cpp  tangents_between.cpp  tsp.cpp  tsp_tests.cpp
